# test-time-hinting

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
scripts/: run_optimization.py
src/tth/: config.py  images.py  loop.py  main.py  runner.py  schema.py
src/tth/clients/: __init__.py  anthropic_.py  factory.py  gemini.py  openai_.py
src/tth/prompts/: __init__.py  builder.py
tests/: test_schema.py
